add page visibility fucntionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <h1>Определяет видна ли страница в данный момент</h1>
-<h3>Page is visible:</h3>
+<h3>Page is visible: {{ pageVisibility$ | async }}</h3>
